@@ -137,6 +137,9 @@ PHP 7.4 UPGRADE NOTES
 - SQLite3:
   . The bundled libsqlite has been removed.  To build the SQLite3 and/or
     PDO_SQLite extensions a system libsqlite3 ≥ 3.5.0 is now required.
+  . (Un)serialization of SQLite3, SQLite3Stmt and SQLite3Result is now explictly
+    forbidden. Formerly, serialization of instances of these classes was
+    possible, but unserialization yielded unusable objects.
   . The @param notation can now also be used to denote SQL query parameters.
 
 - Zip:
